// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fulfilled types 1`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "email": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "remember": false,
      "storedEmail": null,
      "username": null,
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pending": false,
      "userInfo": Object {
        "test": "success",
      },
    },
  },
  "type": "USER_CREATE_FULFILLED",
}
`;

exports[`fulfilled types 2`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "email": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "remember": false,
      "storedEmail": null,
      "username": null,
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "pending": false,
      "userInfo": Object {
        "test": "success",
      },
    },
  },
  "type": "USER_DELETE_FULFILLED",
}
`;

exports[`fulfilled types 3`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": true,
      "email": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "remember": false,
      "storedEmail": null,
      "username": null,
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_INFO_FULFILLED",
}
`;

exports[`fulfilled types 4`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": true,
      "email": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "loginFailed": false,
      "pending": false,
      "remember": false,
      "storedEmail": null,
      "username": null,
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_LOGIN_FULFILLED",
}
`;

exports[`fulfilled types 5`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "email": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "remember": false,
      "storedEmail": null,
      "username": null,
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_LOGOUT_FULFILLED",
}
`;

exports[`fulfilled types 6`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "email": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "remember": true,
      "storedEmail": undefined,
      "username": null,
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_STORED_DATA_FULFILLED",
}
`;

exports[`fulfilled types 7`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "email": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "remember": false,
      "storedEmail": null,
      "username": null,
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_STORED_DATA_REMOVE_FULFILLED",
}
`;

exports[`pending types 1`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "email": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "remember": false,
      "storedEmail": null,
      "username": null,
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": true,
      "userInfo": Object {},
    },
  },
  "type": "USER_CREATE_PENDING",
}
`;

exports[`pending types 2`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "email": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "remember": false,
      "storedEmail": null,
      "username": null,
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": true,
      "userInfo": Object {},
    },
  },
  "type": "USER_DELETE_PENDING",
}
`;

exports[`pending types 3`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "email": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "remember": false,
      "storedEmail": null,
      "username": null,
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_INFO_PENDING",
}
`;

exports[`pending types 4`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "email": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": true,
      "remember": false,
      "storedEmail": null,
      "username": null,
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_LOGIN_PENDING",
}
`;

exports[`pending types 5`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "email": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "remember": false,
      "storedEmail": null,
      "username": null,
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_LOGOUT_PENDING",
}
`;

exports[`pending types 6`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "email": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "remember": false,
      "storedEmail": null,
      "username": null,
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_STORED_DATA_PENDING",
}
`;

exports[`pending types 7`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "email": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "remember": false,
      "storedEmail": null,
      "username": null,
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_STORED_DATA_REMOVE_PENDING",
}
`;

exports[`rejected types 1`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "email": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "remember": false,
      "storedEmail": null,
      "username": null,
    },
    "user": Object {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_CREATE_REJECTED",
}
`;

exports[`rejected types 2`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "email": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "remember": false,
      "storedEmail": null,
      "username": null,
    },
    "user": Object {
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_DELETE_REJECTED",
}
`;

exports[`rejected types 3`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "email": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "remember": false,
      "storedEmail": null,
      "username": null,
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_INFO_REJECTED",
}
`;

exports[`rejected types 4`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "email": null,
      "error": true,
      "errorMessage": "MESSAGE",
      "fulfilled": false,
      "loginFailed": true,
      "pending": false,
      "remember": false,
      "storedEmail": null,
      "username": null,
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_LOGIN_REJECTED",
}
`;

exports[`rejected types 5`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "email": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "remember": false,
      "storedEmail": null,
      "username": null,
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_LOGOUT_REJECTED",
}
`;

exports[`rejected types 6`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "email": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "remember": false,
      "storedEmail": null,
      "username": null,
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_STORED_DATA_REJECTED",
}
`;

exports[`rejected types 7`] = `
Object {
  "result": Object {
    "session": Object {
      "authorized": false,
      "email": null,
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "loginFailed": false,
      "pending": false,
      "remember": false,
      "storedEmail": null,
      "username": null,
    },
    "user": Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": false,
      "userInfo": Object {},
    },
  },
  "type": "USER_STORED_DATA_REMOVE_REJECTED",
}
`;
